--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "matplotlib>=3.10.8",
     "open3d>=0.19.0",
     "opencv-contrib-python>=4.13.0.92",
+    "pyarrow>=23.0.0",
     "pyglet<2",
     "python-dotenv>=1.2.1",
     "rerun-sdk>=0.29.1",
